# yolov11obb-n-test-harness

./: .gitignore  README.md  pyproject.toml  run_harness.py
harness/: common.py  config.py  corruptions.py  data_tests.py  metrics.py  model_tests.py  ood.py  robustness.py  traceability.py
results/: summary.json  svcp_results.csv  svcp_results.md
results/TC-DATA-01/: evidence.json  result.json
results/TC-DATA-02/: evidence.json  result.json
results/TC-DATA-03/: evidence.json  result.json
results/TC-DATA-04/: evidence.json  result.json
results/TC-DATA-05/: evidence.json  result.json
results/TC-FUN/: evidence.json  result.json
results/TC-OOD-01/: evidence.json  result.json
results/TC-PERF-01/: accuracy.json  evidence.json  result.json
results/TC-ROB-01/: evidence.json  result.json  retention.json
results/TC-ROB-02/: evidence.json  geometric.json  result.json
results/TC-TIM-01/: evidence.json  result.json
tests/: conftest.py  test_corruptions.py  test_integration.py  test_metrics.py  test_tc_data_01.py  test_tc_data_02.py  test_tc_data_03.py  test_tc_data_04.py  test_tc_data_05.py  test_tc_fun.py  test_tc_ood_01.py  test_tc_perf_01.py  test_tc_rob_01.py  test_tc_rob_02.py  test_tc_tim_01.py  test_traceability.py
